--- a/source/css/default.css
+++ b/source/css/default.css
@@ -119,6 +119,7 @@ div.menuhead {
 	border: 1px solid #cccccc;
 	margin-left: 5px;
 	margin-top: 10px;
+	white-space: nowrap;
 }
 
 ul.menu {
